# autonomous-data-analysis-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
data/: autodata_demo_business_dataset.xlsx  autodata_demo_orders.csv  autodata_demo_orders.json
docs/: architecture.md  demo_dataset.md  demo_sales_dataset.csv  demo_sales_dataset.xlsx  huggingface-spaces-backend.md  implementation_notes.md
frontend/: README.md  api_client.py  app.py  index.html  package-lock.json  package.json  requirements.txt
frontend-streamline/: api_client.py  app.py
frontend-streamline/components/: analysis.py  charts_history.py
frontend/components/: analysis.py  charts_history.py  upload_profile.py
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
outputs/: autonomous_data_analysis_agent_project_pack.md
scripts/: build_demo_sales_dataset.py  build_demo_workbook.mjs  check_ollama_connection.py  load_demo_sales_to_postgres.py
src/autodata_agent/: __init__.py  main.py
src/autodata_agent/api/: app.py  dependencies.py  routes.py
src/autodata_agent/core/: config.py  errors.py  json_utils.py  schemas.py
src/autodata_agent/services/: analysis.py  charts.py  datasets.py  executor.py  llm.py  profiling.py
src/autodata_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_analysis_service.py  test_api_endpoints.py  test_api_errors.py  test_charts.py  test_config.py  test_executor.py  test_frontend_api_client.py  test_ingestion_profile.py  test_json_utils.py  test_sql_ingestion.py
(+1 files in other folders)
